# imgedit

./: CMakeLists.txt  LICENSE  README.md
packaging/: imgedit.desktop  install.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: imagedocument.cpp  imagedocument.h  layerstack.cpp  layerstack.h  operation.cpp  operation.h  undostack.cpp  undostack.h
src/filters/: filter.cpp  filter.h
src/project/: projectfile.cpp  projectfile.h
src/tools/: brush.cpp  brush.h  tool.cpp  tool.h
src/ui/: canvasitem.cpp  canvasitem.h  canvasview.cpp  canvasview.h  colorpicker.cpp  colorpicker.h  propertiespanel.cpp  propertiespanel.h  toolbar.cpp  toolbar.h
src/utils/: fontawesome.cpp  fontawesome.h  iconengine.cpp  iconengine.h
